@@ -18,3 +18,5 @@ Thanks to:
     Alex Koudr whoes help with with mouse scanning on Windows
     Nicolas Vion whoes add the french translation
     Andriy Rysin whoes add the command line support
+    Yao Ziyuan whoes improve the simplified chinese translation
+
