@@ -106,3 +106,4 @@
 	- improve Windows port
 	- add SWAC plugin
 	- add command line support
+	- improve the simplified chinese translation
